--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="View all > "
+                android:visibility="invisible"
                 android:id="@+id/viewAllTextView"
                 android:textSize="@dimen/_11sdp" />
 
