--- a/app/src/main/res/layout/product_images_list_item.xml
+++ b/app/src/main/res/layout/product_images_list_item.xml
@@ -14,8 +14,7 @@
             android:id="@+id/productImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/_3sdp"
-            android:background="@color/grey" />
+            android:layout_margin="@dimen/_3sdp" />
 
 
     </LinearLayout>
