--- a/app/src/main/res/layout/activity_category_products.xml
+++ b/app/src/main/res/layout/activity_category_products.xml
@@ -28,11 +28,11 @@
                 android:src="@drawable/ic_back_arrow" />
 
             <TextView
+                android:id="@+id/categoryNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_8sdp"
                 android:gravity="center"
-                android:text="Grocery &amp; Staples"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_13sdp"
                 app:fontFamily="@font/poppins_medium" />
