--- a/app/src/main/res/layout/products_list_item.xml
+++ b/app/src/main/res/layout/products_list_item.xml
@@ -113,7 +113,8 @@
             android:gravity="center"
             android:text="ADD"
             android:textColor="@color/white"
-            android:textSize="@dimen/_12sdp" />
+            android:textSize="@dimen/_12sdp"
+            android:visibility="gone" />
 
     </LinearLayout>
 
