--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -17,6 +17,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/_6sdp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -24,7 +25,7 @@
                 android:id="@+id/backImageView"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
-                android:padding="@dimen/_4sdp"
+                android:padding="@dimen/_6sdp"
                 android:src="@drawable/ic_back_arrow" />
 
             <TextView
@@ -88,7 +89,25 @@
         android:layout_above="@+id/paymentTextView"
         android:layout_below="@+id/topLayout"
         android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_8sdp"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginRight="@dimen/_8sdp"
+        android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
+
+
+    <TextView
+        android:id="@+id/noDataTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/paymentTextView"
+        android:layout_below="@+id/topLayout"
+        android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginRight="@dimen/_8sdp"
+        android:fontFamily="@font/poppins_medium"
+        android:gravity="center"
+        android:text="No items in cart"
+        android:textSize="@dimen/_12sdp"
+        android:textStyle="italic"
+        android:visibility="gone"></TextView>
+
 
     <TextView
         android:id="@+id/paymentTextView"
@@ -100,6 +119,7 @@
         android:gravity="center"
         android:text="Checkout"
         android:textColor="@color/white"
-        android:textSize="@dimen/_13sdp" />
+        android:textSize="@dimen/_13sdp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
