--- a/app/src/main/res/layout/cart_products_list_item.xml
+++ b/app/src/main/res/layout/cart_products_list_item.xml
@@ -13,159 +13,176 @@
         app:cardCornerRadius="@dimen/_5sdp"
         app:cardElevation="@dimen/_3sdp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:padding="@dimen/_8sdp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="1">
-
-                <ImageView
-                    android:layout_width="@dimen/_60sdp"
-                    android:id="@+id/productImageView"
-                    android:layout_height="@dimen/_70sdp"
-                    android:background="@color/grey" />
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:padding="@dimen/_8sdp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_6sdp"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:orientation="vertical">
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
-                    <TextView
-                        android:id="@+id/productNameTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tata Sampann Organic Moong Dai"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_12sdp" />
-
-                    <TextView
-                        android:id="@+id/productQuantityTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_2sdp"
-                        android:text="1 Kg"
-                        android:textSize="@dimen/_11sdp" />
+                    <ImageView
+                        android:id="@+id/productImageView"
+                        android:layout_width="@dimen/_60sdp"
+                        android:layout_height="@dimen/_70sdp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_2sdp"
-                        android:orientation="horizontal">
+                        android:layout_marginLeft="@dimen/_6sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginRight="@dimen/_30sdp"
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/offerCostTextView"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/productNameTextView"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginRight="@dimen/_2sdp"
-                            android:gravity="center|right"
-                            android:paddingLeft="@dimen/_3sdp"
-                            android:text="₹420"
+                            android:text="Tata Sampann Organic Moong Dai"
                             android:textColor="@color/black"
+                            android:textSize="@dimen/_12sdp" />
+
+                        <TextView
+                            android:id="@+id/productQuantityTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_2sdp"
+                            android:text="1 Kg"
                             android:textSize="@dimen/_11sdp" />
 
-                        <TextView
-                            android:id="@+id/costTextView"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginLeft="@dimen/_10sdp"
-                            android:layout_marginRight="@dimen/_2sdp"
-                            android:background="@drawable/strike_through"
-                            android:gravity="center|right"
-                            android:paddingLeft="@dimen/_3sdp"
-                            android:text="₹480"
-                            android:textSize="@dimen/_10sdp" />
+                            android:layout_marginTop="@dimen/_2sdp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/offerCostTextView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_marginRight="@dimen/_2sdp"
+                                android:gravity="center|right"
+                                android:paddingLeft="@dimen/_3sdp"
+                                android:text="₹420"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_11sdp" />
+
+                            <TextView
+                                android:id="@+id/costTextView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_marginLeft="@dimen/_10sdp"
+                                android:layout_marginRight="@dimen/_2sdp"
+                                android:background="@drawable/strike_through"
+                                android:gravity="center|right"
+                                android:paddingLeft="@dimen/_3sdp"
+                                android:text="₹480"
+                                android:textSize="@dimen/_10sdp" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
                 </LinearLayout>
 
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:orientation="horizontal">
+                    android:layout_marginTop="@dimen/_2sdp">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1 Offer Available >"
-                        android:textColor="@color/green"
-                        android:textSize="@dimen/_10sdp"
-                        app:fontFamily="@font/poppins_medium" />
+                        android:layout_alignParentLeft="true"
+                        android:orientation="horizontal">
 
-                </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1 Offer Available >"
+                            android:textColor="@color/green"
+                            android:textSize="@dimen/_10sdp"
+                            app:fontFamily="@font/poppins_medium" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/_6sdp"
-                    android:background="@drawable/item_border"
-                    android:orientation="horizontal">
+                    </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/deleteTextView"
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:paddingLeft="@dimen/_10sdp"
-                        android:paddingRight="@dimen/_10sdp"
-                        android:text="-"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_12sdp" />
+                        android:layout_height="@dimen/_20sdp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/_6sdp"
+                        android:background="@drawable/item_border"
+                        android:orientation="horizontal">
 
-                    <View
-                        android:layout_width="@dimen/_1sdp"
-                        android:layout_height="match_parent"
-                        android:background="#cccccc"></View>
+                        <TextView
+                            android:id="@+id/deleteTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:paddingLeft="@dimen/_10sdp"
+                            android:paddingRight="@dimen/_10sdp"
+                            android:text="-"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_12sdp" />
 
-                    <TextView
-                        android:id="@+id/countTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:paddingLeft="@dimen/_10sdp"
-                        android:paddingRight="@dimen/_10sdp"
-                        android:text="1"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_13sdp" />
+                        <View
+                            android:layout_width="@dimen/_1sdp"
+                            android:layout_height="match_parent"
+                            android:background="#cccccc"></View>
 
-                    <View
-                        android:layout_width="@dimen/_1sdp"
-                        android:layout_height="match_parent"
-                        android:background="#cccccc"></View>
+                        <TextView
+                            android:id="@+id/countTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:paddingLeft="@dimen/_10sdp"
+                            android:paddingRight="@dimen/_10sdp"
+                            android:text="1"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_13sdp" />
 
-                    <TextView
-                        android:id="@+id/addTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:paddingLeft="@dimen/_10sdp"
-                        android:paddingRight="@dimen/_10sdp"
-                        android:text="+"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_12sdp" />
+                        <View
+                            android:layout_width="@dimen/_1sdp"
+                            android:layout_height="match_parent"
+                            android:background="#cccccc"></View>
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/addTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:paddingLeft="@dimen/_10sdp"
+                            android:paddingRight="@dimen/_10sdp"
+                            android:text="+"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_12sdp" />
 
-            </RelativeLayout>
+                    </LinearLayout>
 
-        </LinearLayout>
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="@dimen/_28sdp"
+                android:layout_height="@dimen/_28sdp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:id="@+id/deleteImageView"
+                android:layout_marginRight="@dimen/_8sdp"
+                android:padding="@dimen/_3sdp"
+                android:src="@drawable/delete_outline"
+                android:tint="#5E5D5D" />
+
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
