--- a/app/src/main/res/layout/dialog_cities.xml
+++ b/app/src/main/res/layout/dialog_cities.xml
@@ -8,10 +8,9 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/_290sdp"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:elevation="@dimen/_3sdp"
         android:gravity="center"
         android:orientation="vertical"
         android:weightSum="1">
