--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingTop="@dimen/_5sdp"
         android:paddingBottom="@dimen/_5sdp">
 
@@ -29,6 +29,11 @@
             android:hint="Search Here"
             android:paddingLeft="@dimen/_6sdp"
             android:textSize="@dimen/_11sdp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/productsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
