Added Shipping api and Location images

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -85,11 +85,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cartRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/paymentTextView"
         android:layout_below="@+id/topLayout"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_8sdp"
+        android:layout_marginLeft="@dimen/_6sdp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginRight="@dimen/_6sdp"
         android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
 
 
