--- a/app/src/main/res/layout/cart_products_list_item.xml
+++ b/app/src/main/res/layout/cart_products_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_color">
 
@@ -9,8 +9,8 @@
         android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_6sdp"
-        app:cardCornerRadius="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        app:cardCornerRadius="@dimen/_4sdp"
         app:cardElevation="@dimen/_3sdp">
 
         <RelativeLayout
@@ -33,7 +33,7 @@
                     <ImageView
                         android:id="@+id/productImageView"
                         android:layout_width="@dimen/_60sdp"
-                        android:layout_height="@dimen/_70sdp" />
+                        android:layout_height="@dimen/_60sdp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
