--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -98,6 +98,7 @@
                 android:tint="@color/grey" />
 
             <LinearLayout
+                android:id="@+id/locationLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/_6sdp"
@@ -121,6 +122,7 @@
                     android:gravity="left|center"
                     android:maxEms="30"
                     android:maxLines="1"
+                    android:inputType="textCapWords"
                     android:text="Madhapur Petrol Pump..."
                     android:textColor="#33383f"
                     android:textSize="@dimen/_11sdp"
@@ -189,9 +191,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/viewPager"
-                    android:paddingBottom="@dimen/_5sdp"
                     android:gravity="center_vertical|center_horizontal"
-                    android:orientation="horizontal" />
+                    android:orientation="horizontal"
+                    android:paddingBottom="@dimen/_5sdp" />
 
             </LinearLayout>
 
