--- a/app/src/main/res/layout/activity_category_products.xml
+++ b/app/src/main/res/layout/activity_category_products.xml
@@ -98,11 +98,11 @@
                     android:src="@drawable/circle_filled_green" />
 
                 <TextView
+                    android:id="@+id/cartCountTextView"
                     android:layout_width="@dimen/_12sdp"
                     android:layout_height="@dimen/_12sdp"
                     android:layout_alignParentRight="true"
                     android:gravity="center"
-                    android:text="1"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_8sdp"
                     android:textStyle="bold" />
